--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,7 +8,11 @@ on:
     schedule:
       - cron: '15 6 * * 0'
     workflow_dispatch:
-
+      inputs:
+          environment:
+            description: 'Environment to deploy to'
+            type: environment
+            required: true
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -23,3 +27,45 @@ jobs:
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
       
+  Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: |
+          echo "🧪 Testing..."
+
+  Load-Test:
+    runs-on: ubuntu-latest    
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Load-Test
+    steps:
+      - run: |
+          echo "🧪 Testing..."
+          sleep 15
+          
+  Production:
+    runs-on: ubuntu-latest    
+    needs: [Test, Load-Test]
+    if: github.event.inputs.environment == "Production"
+    environment: 
+        name: Production
+        url: https://writeabout.net
+    steps:
+      - run: |
+          echo "Step 1 deploying..."
+          sleep(10)
+      - run: |
+          echo "Step 2 deploying..."
+          sleep(10)
+      - run: |
+          echo "Step 3 deploying..."
+          sleep(10)
+      - run: |
+          echo "Step 4 deploying..."
+          sleep(10)
+      - run: |
+          echo "Step 5 deploying..."
+          sleep(10)
