--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -49,7 +49,7 @@ jobs:
   Production:
     runs-on: ubuntu-latest    
     needs: [Test, Load-Test]
-    if: github.event.inputs.environment == "Production"
+    if: github.event.inputs.environment == 'Production'
     environment: 
         name: Production
         url: https://writeabout.net
