--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -56,16 +56,16 @@ jobs:
     steps:
       - run: |
           echo "Step 1 deploying..."
-          sleep(10)
+          sleep 10
       - run: |
           echo "Step 2 deploying..."
-          sleep(10)
+          sleep 10
       - run: |
           echo "Step 3 deploying..."
-          sleep(10)
+          sleep 10
       - run: |
           echo "Step 4 deploying..."
-          sleep(10)
+          sleep 10
       - run: |
           echo "Step 5 deploying..."
-          sleep(10)
+          sleep 10
